fix display text overflow

--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,22 @@ body {
 
 .disp {
 	text-align: right;
-	font-size: 5vmax;
+	font-size: 4.5vmax;
 	margin: auto 0.35em;
 	color: #f2f2f2;
 	width: 30vmax;
 	height: 15%;
 	word-wrap: wrap;
+	overflow-x: scroll;
+}
+
+.disp::-webkit-scrollbar {
+    background-color: #222222;
+}
+
+.disp::-webkit-scrollbar-thumb {
+  	background-color: #2f2f2f;
+  	border-radius: 1vmax;
 }
 
 .grid {
